src/test/deca/context/invalid/type-inequality-left.deca
// Description:
//    Comparaison de l'inégalité d'une chaine de charactères à gauche
//
// Resultats:
//    Ligne 11: Le type ne respecte pas la règle 3.33.
//
// Historique:
//    cree le 14/01/2024

{
    print("hello" >= 5);
}